# rt-fc-offloader

./: .clinerules  .cursorrules  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_TODO.md  PROMPT.md  README.md  REQUIREMENTS.md  settings.sh  tangnano9k.gprj
.ai-docs/: architecture_summary.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
cmake/: assert_file_exists.cmake  tang.cmake  tang9k.cmake
docs/: ARCH_BUS_STRATEGY.md  BLHELI_PASSTHROUGH.md  BLHELI_QUICKSTART.md  BLOGGER_ENTRIES.md  BLUEJAY_ESC_ANALYSIS.md  DESIGN.md  ENGINEERING_LOG.md  FCSP_BRINGUP_PLAN.md  FCSP_COMMAND_TRANSLATION.md  FCSP_PROTOCOL.md  FCSP_SPI_TRANSPORT.md  FPGA_BLOCK_DESIGN.md  GAO_DEBUGGING.md  HACKSTER_STORY.md  HARDWARE_PINS.md  LEGACY_RTL_REUSE_MAP.md  PATTERN_SNIPPETS.md  PICO_PIO_IMPLEMENTATION_NOTES.md  PIO_TO_RTL_COMPARISON.md  PYTHON_SUBMODULE_WORKFLOW.md  RELEASE_PROCESS.md  REPO_CONTRACT.md  SWITCH_ARCHITECTURE.md  SYSTEM_OVERVIEW.md  TANG9K_FIT_GATE.md  TANG9K_PROGRAMMING.md  TEACHING_GUIDE.md  TIMING_REPORT.md  TOOLCHAIN_SETUP.md  TOP_LEVEL_BLOCK_DIAGRAM.md  VALIDATION_MATRIX.md
docs/assets/: fcsp_command_translation.txt  fpga_fcsp_lift_based_diagram.txt
docs/fit_reports/: fit_evidence_20260403_222624Z.md  fit_evidence_20260403_222758Z.md  fit_evidence_20260403_230224Z.md
firmware/: CMakeLists.txt
firmware/common/: app_main.cpp  dshot_helper.h  esc_4way.cpp  esc_4way.h  esc_passthrough.cpp  esc_passthrough.h  msp.cpp  msp.h  timing_config.h
firmware/hal/: hal.h  pt.h
firmware/pico/: debug_uart.cpp  debug_uart.h  dshot.cpp  dshot.h  dshot.pio  esc_pio_serial.cpp  esc_pio_serial.h  esc_pio_uart.pio  hal_pico.cpp  neopixel.cpp  neopixel.h  pico_main.cpp  pwm_decode.cpp  pwm_decode.h  spi_slave.cpp  spi_slave.h
firmware/serv8/: CMakeLists.txt  README.md  fcsp_command_adapter.hpp  link.ld  main.cpp  start.S
protocol/: fcsp_command_map.json
python/: README.md
python/hw/: example_esc_flash.py  test_hw_dshot.py  test_hw_esc_passthrough.py  test_hw_neopixel.py  test_hw_neopixel_debug.py  test_hw_onboard_led_walk.py  test_hw_switching.py  test_hw_version_poll.py
python/tools/: report_tang9k_build_summary.py
rtl/fcsp/: INTERFACES.md  README.md  fcsp_crc16.sv  fcsp_crc16_core_xmodem.sv  fcsp_crc_gate.sv  fcsp_debug_generator.sv  fcsp_io_engines.sv  fcsp_offloader_top.sv  fcsp_parser.sv  fcsp_router.sv  fcsp_rx_fifo.sv  fcsp_serv_bridge.sv  fcsp_serv_stub.sv  fcsp_spi_frontend.sv  fcsp_stream_packetizer.sv  fcsp_tx_arbiter.sv  fcsp_tx_fifo.sv  fcsp_tx_framer.sv  fcsp_uart_byte_stream.sv  fcsp_wishbone_master.sv
rtl/io/: dshot_out.sv  pwmdecoder.sv  pwmdecoder_wb.sv  sendPx_axis_flexible.sv  wb_dshot_controller.sv  wb_esc_uart.sv  wb_io_bus.sv  wb_neoPx.sv  wb_serial_dshot_mux.sv
scripts/: build_gowin.tcl  build_gowin_20k.tcl  build_gowin_20k_cli.sh  build_gowin_cli.sh  build_tang20k_oss.sh  build_tang9k_oss.sh  build_tang_oss.sh  check_docs_consistency.sh  fcsp_companion_sync.sh  generate_fit_evidence_snapshot.sh  install_latest_tools.sh  oss_tools_env.sh  program_gowin_20k.sh  program_gowin_9k.sh  program_tang.sh  program_tang20k.sh  program_tang9k.sh  stop_tang9k_build.sh  stop_tang_build.sh
sim/: CMakeLists.txt  Makefile  README.md  requirements.txt
sim/cocotb/: esc_traffic_gen.py  test_axis_frame_stage_cocotb.py  test_dshot_out_cocotb.py  test_e2e_blheli_boot_cocotb.py  test_e2e_esc_roundtrip_cocotb.py  test_e2e_fcsp_wb_io_cocotb.py  test_e2e_led_cocotb.py  test_e2e_neopixel_cocotb.py  test_e2e_spi_tx_cocotb.py  test_e2e_switching_cocotb.py  test_esc_passthrough_e2e.py  test_esc_protocol_cocotb.py  test_fcsp_offloader_top_cocotb.py  test_fcsp_parser_cocotb.py  test_fcsp_stream_packetizer_cocotb.py  test_fcsp_tx_arbiter_cocotb.py  test_fcsp_tx_fifo_cocotb.py  test_fcsp_wishbone_master_cocotb.py  test_pwmdecoder_cocotb.py  test_spi_routing_policy_cocotb.py  test_top_introspect.py  test_wb_esc_uart_cocotb.py  test_wb_io_bus_cocotb.py  test_wb_led_controller_cocotb.py  test_wb_neoPx_cocotb.py  test_wb_serial_dshot_mux_cocotb.py  test_wb_status_regs_cocotb.py
sim/python_fcsp/: __init__.py  command_adapter.py  fcsp_codec.py
traces/: Session 1.sal
(+39 files in other folders)
